# streamlit-image-coordinates

./: .cruft.json  .pre-commit-config.yaml  MANIFEST.in  README.md  kitty.npy  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.github/workflows/: publish_PYPI_each_tag.yml
pages/: dynamic_update.py  more_formats.py  png_support.py  rectangle_select.py
src/streamlit_image_coordinates/: __init__.py
src/streamlit_image_coordinates/frontend/: index.html  main.js  style.css
